test/e2e/testdata/ext-auth-grpc-timeout-securitypolicy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-ext-auth
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  hostnames: ["www.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /myapp # This is the path that will be protected by ext auth
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-without-ext-auth
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  hostnames: ["www.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /public # This is the path that will be public
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ext-auth-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-with-ext-auth
  extAuth:
    timeout: 0ms # 0 millisecond - should cause immediate timeout
    grpc:
      backendRefs:
        - name: grpc-ext-auth
          namespace: gateway-conformance-infra
          port: 9002
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: envoy-ext-auth-btls
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: grpc-ext-auth
      sectionName: grpc
  validation:
    caCertificateRefs:
      - name: envoy-ext-auth-ca
        group: ""
        kind: ConfigMap
    hostname: grpc-ext-auth
